# plugin-sdk

./: CMakeLists.txt
injector/: injector.hpp
plugin_III/game_III/rw/: rwplcore.h
plugin_sa/: CMakeLists.txt
plugin_sa/game_sa/rw/: rwplcore.h
plugin_vc/game_vc/rw/: rwplcore.h
shared/: SpriteLoader.cpp
shared/dxsdk/: d3d9.h  d3dx9math.inl
shared/game/: CompressedVector.cpp
